--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.25.0",
+    "expo-location": "^14.0.1",
     "react": "17.0.2",
     "react-native": "^0.66.0",
     "react-native-gesture-handler": "^2.2.0",
